--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: easy_stripe_payment
 description: "A new Flutter package project."
 version: 1.0.0
 homepage: https://github.com/Just4prog/easy_stripe_payment
+author: Ahmed Alnahhal
 
 environment:
   sdk: ^3.7.0
